syntax = "proto3";

package notification.v1;

import "google/protobuf/timestamp.proto";
import "notification/v1/error_reason.proto";

option go_package = "github.com/wyfcoding/financialtrading/go-api/notification/v1;v1";

service Notification {
  // Send a direct notification (Internal Use)
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse) {};
  
  // Get history for a user
  rpc GetHistory(GetHistoryRequest) returns (GetHistoryResponse) {};
}

enum Channel {
  CHANNEL_UNSPECIFIED = 0;
  EMAIL = 1;
  SMS = 2;
  PUSH = 3;
}

message SendNotificationRequest {
  string user_id = 1;
  Channel channel = 2;
  string recipient = 3; // Email address or Phone number
  string subject = 4;
  string content = 5;
}

message SendNotificationResponse {
  bool success = 1;
  string notification_id = 2;
}

message GetHistoryRequest {
  string user_id = 1;
  int32 limit = 2;
}

message NotificationRecord {
  string id = 1;
  Channel channel = 2;
  string recipient = 3;
  string subject = 4;
  string content = 5;
  string status = 6;
  google.protobuf.Timestamp created_at = 7;
}

message GetHistoryResponse {
  repeated NotificationRecord records = 1;
}
